refactor : #413 리뷰수정